# misis-2023-spring-oop

lopatkin_a_a/: CMakeLists.txt  CMakeSettings.json  docs.doxyfile
lopatkin_a_a/docs/html/: dir_182e44306a3eb7bbc37976dd6dd3bf05.html  dir_18825ad73f23e3b4d99518ec46603987.html  dir_83806edfeece0b961894d07e0431c041.html  dir_8e7b6a59d4958bf884ef8f3e7efa3c6a.html  dir_9c4fc25b1d93d20fee66320350a2f2ef.html  files.html  globals.html  globals_func.html  index.html
lopatkin_a_a/docs/html/d4/d44/: metrics_8hpp.html  metrics_8hpp_source.html
lopatkin_a_a/docs/html/search/: all_0.js  all_2.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
lopatkin_a_a/docs/latex/: files.tex  index.tex  refman.tex
lopatkin_a_a/docs/latex/d4/d44/: metrics_8hpp.tex  metrics_8hpp_source.tex
lopatkin_a_a/prj.cw/: CMakeLists.txt  main.cpp
lopatkin_a_a/prj.cw/metrics/: CMakeLists.txt
lopatkin_a_a/prj.cw/metrics/include/metrics/: metrics.hpp
lopatkin_a_a/prj.cw/metrics/src/: metrics.cpp
lopatkin_a_a/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
lopatkin_a_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
lopatkin_a_a/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
lopatkin_a_a/prj.lab/arrayt/include/arrayt/: arrayt.hpp
lopatkin_a_a/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
lopatkin_a_a/prj.lab/rational/: CMakeLists.txt  rational.cpp
lopatkin_a_a/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp
prj.lab/rational/include/rational/: rational.hpp
(+2 files in other folders)
